# guard

./: .gitignore  build.gradle  gradle.properties  multidex-config.pro  settings.gradle
appShell/: CMakeLists.txt  README.md  build.gradle  elfParser.py
appShell/src/androidTest/java/com/jamesfchen/shell/: ExampleInstrumentedTest.kt
appShell/src/main/: AndroidManifest.xml
appShell/src/main/java/com/jamesfchen/shell/: DexShellApplication.java  StartActivity.java
appShell/src/main/jni/generator/: Makefile
appShell/src/test/java/com/jamesfchen/shell/: ExampleUnitTest.kt
fake-binder/: CMakeLists.txt  build.gradle  build.gradle.kts.bkp
fake-binder/src/androidTest/java/com/jamesfchen/binder/: ExampleInstrumentedTest.kt
fake-binder/src/main/: AndroidManifest.xml
fake-binder/src/main/cpp/: IPCThreadState.cpp  IPCThreadState.h  ProcessState.cpp  ProcessState.h  Static.cpp  Static.h  data_struct_ext.cpp  data_struct_ext.h
fake-binder/src/main/cpp/jni/: BBinder.cpp  BBinder.h  BpBinder.cpp  BpBinder.h  IBinder.h  OnLoad.cpp  OnLoad.h  Parcel.cpp  Parcel.h  ServiceManager.cpp  ServiceManager.h
fake-binder/src/main/java/com/jamesfchen/binder/: Binder.java  BinderProxy.java  IBinder.java  Parcel.java  ProxyTransactListener.java  ServiceManager.java
fake-binder/src/main/svc/: service_manager.cpp
fake-binder/src/test/java/com/jamesfchen/binder/: ExampleUnitTest.kt
fake-linker/: CMakeLists.txt  build.gradle  build.gradle.kts.bkp
fake-linker/src/androidTest/java/com/jamesfchen/linker/: ExampleInstrumentedTest.kt
fake-linker/src/main/: AndroidManifest.xml
fake-linker/src/main/cpp/: OnLoad.cpp  bionic_linker.h  elfSharedLibData.cpp  elfSharedLibData.h  link.cpp  linker.cpp  sharedlibs.cpp
fake-linker/src/main/cpp/sig_safe_write/: sig_safe_write.c
fake-linker/src/test/java/com/jamesfchen/linker/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
guard/: CMakeLists.txt  README.md  build.gradle
guard/src/main/: AndroidManifest.xml
guard/src/main/cpp/dynamic_so/: CMakeLists.txt  main.cpp
guard/src/main/cpp/guard/: CMakeLists.txt  data_struct_ext.h  event.cpp  event.h  guard.cpp  mmap_ext.cpp  so_protector.cpp  so_protector.h
guard/src/main/cpp/so_shell/: CMakeLists.txt  extra_defines.h  gdlfcn.cpp  linker.cpp  linker_allocator.cpp  linker_phdr.cpp
guard/src/main/java/com/electrolytej/guard/: GuardInit.kt  TestGuardActivity.kt
guard/src/main/java/com/electrolytej/guard/plugin/: detection.kt  userIdentification.kt
guard/src/main/java/com/electrolytej/guard/security/: SecurityChecker.java
guard/src/main/res/layout/: activity_testguard.xml
hostApp/: CMakeLists.txt  build.gradle
hostApp/src/main/: AndroidManifest.xml
hostApp/src/main/java/com/electrolytej/titan/: AbsPermissionsActivity.java  App.java  InitiatorContentProvider.kt  MainActivity.java  NativeMath.java  StartActivity.java
hostApp/src/main/jni/: NativeMath.cpp  UnloadTest.cpp
hostApp/src/main/res/layout/: activity_main.xml
hostApp/src/main/res/values/: strings.xml  themes.xml
hostApp/src/main/res/values-night/: themes.xml
